# MCPU

./: CMakeLists.txt  environment.yml
assembler/: CMakeLists.txt
assembler/src/: assmbl.cpp  assmbl.h  dbg.cpp  dbg.h  eval.cpp  eval.h  insns.cpp  insns.h  layt.h  main.cpp  parser.y
core/: CMakeLists.txt
core/src/: 7seg.v  bus.v  counter.v  top.v
core/xdc/: arty.xdc
debugger/: Cargo.toml
debugger/src/: insn.rs  main.rs
docs/: isa.md  progmodel.md
lib/: cpuregs.inc  irq.inc  mem.inc
programs/: CMakeLists.txt
programs/cputest/: CMakeLists.txt  main.s
